--- a/src/StyleSheets/SignUp.css
+++ b/src/StyleSheets/SignUp.css
@@ -18,7 +18,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: relative;
     font-family: "Poppins";
     font-style: normal;
     font-weight: 600;
@@ -26,10 +25,8 @@
 }
 
 .signUpContainer h2 {
-    position: absolute;
-    top: 0.5rem;
     color: #fff;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 30px;
 }
 
@@ -39,7 +36,7 @@
     border-radius: 20px;
     width: 50%;
     padding: 0.5rem 2rem;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
 }
 
 .card h1 {
@@ -70,7 +67,11 @@ form {
 
 .name {
     display: flex;
-    gap: 20px;
+    gap: 10px;
+}
+
+.firstName, .lastName {
+    width: 100%;
 }
 
 .input_box {
@@ -78,6 +79,7 @@ form {
     line-height: 16px;
     color: #666666;
     width: 90%;
+    margin: 0.5rem 0rem;
 }
 
 .input_box input {
@@ -85,7 +87,7 @@ form {
     width: 100%;
     padding: 10px;
     border-radius: 6px;
-    margin: 0.5rem 0rem;
+    margin-top: 0.5rem;
 }
 
 input:focus{
@@ -145,4 +147,39 @@ button {
 .toLogIn a {
     text-decoration: none;
     color: #00B5FF;
+}
+
+.email_box {
+    position: relative;
+}
+
+.valid .email_box:before{
+    content: "";
+  position: absolute;
+  right: 0.5rem;
+  top: 2.1rem;
+  width: 17px;
+  height: 17px;
+  background: url(../Images/valid.png);
+  background-size: cover;
+  z-index: 10;
+}
+
+.invalid .email_box::before{
+    content: "";
+    position: absolute;
+    right: 0.3rem;
+    top: 1.9rem;
+    width: 24px;
+    height: 24px;
+    background: url(../Images/invalid.png);
+    background-size: cover;
+    z-index: 1000;
+}
+
+.error {
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: 400;
+    color: red;
 }
