--- a/src/StyleSheets/DashBoard.css
+++ b/src/StyleSheets/DashBoard.css
@@ -15,6 +15,7 @@
 .sideBar {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 250px;
     height: 100%;
     background: #ffffff;
@@ -26,6 +27,7 @@
     line-height: 24px;
     color: #666666;
     box-shadow: 0px 21px 45px rgba(30, 66, 138, 0.1);
+    gap: 40px;
 }
 
 .container {
@@ -48,6 +50,9 @@
     display: flex;
     align-items: center;
     padding-left: 30px;
+    width: 250px;
+    text-decoration: none;
+    color: inherit;
 }
 
 .bar_box2{
@@ -58,12 +63,6 @@
 .bar_box3 {
     margin-right: 15px;
     padding: 3px
-}
-
-.bar_box:active{
-    background: #00B5FF;
-    opacity: 0.08;
-    color: #00B5FF;
 }
 
 .dashDetails {
